[package]
name = "route"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.4", features = ["color", "derive", "wrap_help"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_with = { version = "2.0.1", features = ["chrono"] }
thiserror = "1.0.37"
